--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,269 +1,102 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Designer, Strategist, and Storyteller, creating human-centered experiences that prompt play and curiosity.">
-	<meta name="keywords" content="Experience Design Architecture Digital Media Interaction Brand Engagement Play Transmedia">
-	
-	<title>{{ page.title }}</title>
-    
-    <!-- ===============    favicon link     =============== -->
-    <link rel="icon" type="image/png" href="assets/images/favicon-jk.ico" />
+---
+layout: default
+title: Jamie Kwan | Experience Design & Strategy
+---
 
-	<!-- Bootstrap core CSS -->
-	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	
-	<!-- Plugins -->
-	<link href="assets/css/simpletextrotator.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
-	<link href="assets/css/et-line-font.css" rel="stylesheet">
-	<link href="assets/css/magnific-popup.css" rel="stylesheet">
-	<link href="assets/css/flexslider.css" rel="stylesheet">
-	<link href="assets/css/animate.css" rel="stylesheet">
-	
-	<!-- Template core CSS -->
-	<link href="assets/css/style.css" rel="stylesheet">
-	
-	<!-- Custom css -->
-	<link href="assets/css/custom.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
+<!-- HOME -->
+	<section id="home" class="module-hero module-parallax module-fade module-full-height bg-dark-50" data-background="assets/images/section-1.jpg">
 
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Montserrat|Open+Sans" rel="stylesheet">
+		<div class="hs-caption container">
+			<div class="caption-content">
+				<div class="hs-title-size-3 font-alt m-b-20">
+					{{ page.title }}
+				</div>
+				<div class="hs-title-size-1 font-inc">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean<br> commodo ligula eget dolor. Aenean massa.
+				</div>
+			</div>
+		</div>
 
+	</section >
+	<!-- /HOME -->
 
-	<!-- ===============    Smooth Scroll Script     =============== -->
-	<script src="assets/js/typed.min.js"></script>
-	<script>
-	    var typed = new Typed('.typed', {
-	      stringsElement: '#typed-strings'
-	    });
-	</script>
+	<!-- WRAPPER -->
+	<div class="wrapper">
 
-</head>
-
-<body>
-
-	<!-- PRELOADER -->
-	<div class="page-loader">
-		<div class="loader">Loading...</div>
-	</div>
-	<!-- /PRELOADER -->
-
-	<!-- NAVIGATION -->
-	<nav class="navbar navbar-custom navbar-transparent navbar-fixed-top" role="navigation">
+		<!-- PORTFOLIO DESCRIPTION -->
+		<section class="module-small">
 
 			<div class="container">
-		
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="index.html">Jamie Kwan</a>
-				</div>
-		
-				<div class="collapse navbar-collapse" id="custom-collapse">
-		
-					<ul class="nav navbar-nav navbar-right">
 
-						<li><a href="https://jamiemkwan.com">Home</a></li>
-						<!-- <li><a href="about.html">About</a></li> -->
-						<li><a href="https://medium.com/design-on-the-mind" target="_blank">Ideas</a></li>
-						<li><a href="contact.html">Contact</a></li>
-		
-					</ul>
-				</div>
-		
-			</div>
+				<div class="row">
 
-	</nav>
-	<!-- /NAVIGATION -->
+					<div class="col-sm-6">
 
-
-	<!-- HOME -->
-		<section id="home" class="module-hero module-parallax module-fade module-full-height bg-dark-50" data-background="assets/images/section-1.jpg">
-
-			<div class="hs-caption container">
-				<div class="caption-content">
-					<div class="hs-title-size-3 font-alt m-b-20">
-						{{ page.title }}
-					</div>
-					<div class="hs-title-size-1 font-inc">
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean<br> commodo ligula eget dolor. Aenean massa.
-					</div>
-				</div>
-			</div>
-
-		</section >
-		<!-- /HOME -->
-
-		<!-- WRAPPER -->
-		<div class="wrapper">
-
-			<!-- PORTFOLIO DESCRIPTION -->
-			<section class="module-small">
-
-				<div class="container">
-
-					<div class="row">
-
-						<div class="col-sm-6">
-
-							<div class="work-details">
-								<h3 class="work-details-title font-alt">Description</h3>
-								<ul>
-									<li class="font-inc"><strong>Client: </strong>SomeCompany</li>
-									<li class="font-inc"><strong>Date: </strong>23 November, 2015</li>
-									<li class="font-inc"><strong>Online: </strong><a href="#" target="_blank">www.example.com</a></li>
-								</ul>
-							</div>
-
-						</div>
-
-						<div class="col-sm-6">
-							<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
-							<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
+						<div class="work-details">
+							<h3 class="work-details-title font-alt">Description</h3>
+							<ul>
+								<li class="font-inc"><strong>Client: </strong>SomeCompany</li>
+								<li class="font-inc"><strong>Date: </strong>23 November, 2015</li>
+								<li class="font-inc"><strong>Online: </strong><a href="#" target="_blank">www.example.com</a></li>
+							</ul>
 						</div>
 
 					</div>
 
-				</div>
-
-			</section>
-			<!-- /PORTFOLIO DESCRIPTION -->
-
-			<!-- PORTFOLIO CONTENT -->
-			<section class="module p-t-0 p-b-0">
-
-				<div class="container">
-
-					<div class="row">
-
-						<div class="col-sm-12">
-
-							<p><img src="../assets/images/section-1.jpg" alt=""></p>
-
-							<p><img src="../assets/images/section-2.jpg" alt=""></p>
-
-							<p><img src="../assets/images/section-3.jpg" alt=""></p>
-
-						</div>
-
-					</div><!-- .row -->
-
-				</div>
-
-			</section>
-			<!-- /PORTFOLIO CONTENT -->
-
-			<!-- PAGINATION -->
-			<section class="module-small p-t-50">
-
-				<div class="container">
-				
-					<div class="pagination font-inc text-uppercase">
-				
-						<a href="#"><i class="fa fa-angle-left"></i> Prev</a>
-						<a href="#">All works</a>
-						<a href="#">Next <i class="fa fa-angle-right"></i></a>
-				
+					<div class="col-sm-6">
+						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
+						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
 					</div>
-				
-				</div>
 
-			</section>
-			<!-- /PAGINATION -->
-
-			<!-- DIVIDER -->
-			<hr class="divider-w">
-			<!-- /DIVIDER -->
-
-	<!-- FOOTER -->
-	<footer class="footer">
-	
-		<div class="container" id="desktop-only">
-	
-			<div class="row">
-	
-				<div class="col-sm-12 col-md-6 text-left">
-					<p class="copyright font-inc m-b-0">© 2019 <a href="index.html">JAMIE KWAN</a></p>
-				</div>
-
-				<div class="col-sm-12 col-md-6 text-right">
-					<p class="copyright font-inc m-b-0">
-						<ul class="list-inline social-icons">
-							<li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="http://www.instagram.com/jamiemkwan" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/jamiemkwan/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="mailto:jamie@studiobud.ca?subject=Hello!"><i class="fa fa-envelope"></i></a></li>
-						</ul>
-					</p>
 				</div>
 
 			</div>
-	
-		</div>
 
-		<div class="container" id="mobile-only">
-	
-			<div class="row">
-	
-				<div class="col-sm-12 col-md-6 text-center">
-					<p class="copyright font-inc m-b-0">© 2019 <a href="index.html">JAMIE KWAN</a></p>
-				</div>
+		</section>
+		<!-- /PORTFOLIO DESCRIPTION -->
 
-				<div class="col-sm-12 col-md-6 text-center">
-					<p class="copyright font-inc m-b-0">
-						<ul class="list-inline social-icons">
-							<li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="http://www.instagram.com/jamiemkwan" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/jamiemkwan/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="mailto:jamie@studiobud.ca?subject=Hello!"><i class="fa fa-envelope"></i></a></li>
-						</ul>
-					</p>
-				</div>
+		<!-- PORTFOLIO CONTENT -->
+		<section class="module p-t-0 p-b-0">
+
+			<div class="container">
+
+				<div class="row">
+
+					<div class="col-sm-12">
+
+						<p><img src="assets/images/section-1.jpg" alt=""></p>
+
+						<p><img src="assets/images/section-2.jpg" alt=""></p>
+
+						<p><img src="assets/images/section-3.jpg" alt=""></p>
+
+					</div>
+
+				</div><!-- .row -->
 
 			</div>
-	
-		</div>
-	
-	
-	</footer>
-	<!-- /FOOTER -->
 
-	</div>
-	<!-- /WRAPPER -->
+		</section>
+		<!-- /PORTFOLIO CONTENT -->
 
-	<!-- Scroll-up -->
-	<div class="scroll-up">
-		<a href="#totop"><i class="fa fa-angle-double-up"></i></a>
-	</div>
-	
-	<!-- Javascript files -->
-	<script src="assets/js/jquery-2.1.3.min.js"></script>
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
-	<script src="assets/js/appear.js"></script>
-	<script src="assets/js/jquery.simple-text-rotator.min.js"></script>
-	<script src="assets/js/jqBootstrapValidation.js"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="assets/js/gmaps.js"></script>
-	<script src="assets/js/isotope.pkgd.min.js"></script>
-	<script src="assets/js/imagesloaded.pkgd.js"></script>
-	<script src="assets/js/jquery.flexslider-min.js"></script>
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="assets/js/jquery.fitvids.js"></script>
-	<script src="assets/js/smoothscroll.js"></script>
-	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/contact.js"></script>
-	<script src="assets/js/custom.js"></script>
+		<!-- PAGINATION -->
+		<section class="module-small p-t-50">
 
-</body>
-</html>
+			<div class="container">
+			
+				<div class="pagination font-inc text-uppercase">
+			
+					<a href="#"><i class="fa fa-angle-left"></i> Prev</a>
+					<a href="#">All works</a>
+					<a href="#">Next <i class="fa fa-angle-right"></i></a>
+			
+				</div>
+			
+			</div>
 
+		</section>
+		<!-- /PAGINATION -->
+
+		<!-- DIVIDER -->
+		<hr class="divider-w">
+		<!-- /DIVIDER -->
