--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -70,7 +70,7 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% for image in page.images %}
 				<div class="row">
 					
-					<div class="col-sm-6 col-sm-offset-3">
+					<div class="col-sm-6 col-sm-offset-3 wow fadeInUp">
 
 						<p><img src="{{ image.image_path }}" alt="{{ image.title }}" class="img-responsive"></p>
 					</div>
