--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 	
 	<!-- Custom css -->
 	<link href="assets/css/custom.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
+	<link type="text/css" href="assets/css/BootstrapXL.css" rel="stylesheet">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Montserrat|Open+Sans" rel="stylesheet">
