--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -86,23 +86,23 @@ title: Jamie Kwan | Experience Design & Strategy
 		</section>
 		<!-- /PORTFOLIO CONTENT -->
 
-		<!-- PAGINATION 
+		<!-- PAGINATION -->
 		<section class="module-small p-t-50">
 
 			<div class="container">
 			
 				<div class="pagination font-inc text-uppercase">
 			
-					<a href="#"><i class="fa fa-angle-left"></i> Prev</a>
-					<a href="http://jamiemkwan.com">Home</a>
-					<a href="#">Next <i class="fa fa-angle-right"></i></a>
+<!-- 					<a href="#"><i class="fa fa-angle-left"></i> Prev</a> -->
+					<a href="http://jamiemkwan.com">Back to Home</a>
+<!-- 					<a href="#">Next <i class="fa fa-angle-right"></i></a> -->
 			
 				</div>
 			
 			</div>
 
 		</section>
-		 /PAGINATION -->
+		<!-- /PAGINATION -->
 
 		<!-- DIVIDER -->
 		<hr class="divider-w">
