--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -67,7 +67,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 			<div class="container">
 
-				{% for text in page.video %}
+				<!-- {% for text in page.video %}
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3  wow fadeInUp">
 						<div class="embed-responsive embed-responsive-16by9">
@@ -75,7 +75,7 @@ title: Jamie Kwan | Experience Design & Strategy
 						</div>
 					</div>
 				</div>
-				{% endfor %}
+				{% endfor %} -->
 
 				{% for image in page.images %}
 				<div class="row">
