--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -78,7 +78,7 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% endfor %} -->
 
 				{% for image in page.images %}
-				<div class="row">
+				<div class="row justify-content-md-center">
 					
 					<div class="col-sm-6 col-sm-offset-3  wow fadeInUp">
 
