--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
 	
 	<!-- Custom css -->
 	<link href="assets/css/custom.css" rel="stylesheet">
-	<link type="text/css" href="assets/css/BootstrapXL.css" rel="stylesheet">
+	<link type="text/css" href="assets/css/BootstrapXL.css" rel="stylesheet">        
+    <link href="assets/css/lightbox.css" rel="stylesheet"> 
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Montserrat|Open+Sans" rel="stylesheet">
