--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -82,7 +82,7 @@ title: Jamie Kwan | Experience Design & Strategy
 					
 					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeInUp">
 						<p>
-							<a href="{{ image.image_path }}" class="popup" title="{{ image.title }}">
+							<a href="{{ image.image_path }}" data-lightbox="{{ page.id }}">
 								<img src="{{ image.image_path }}" alt="{{ image.title }}">
 							</a>
 						</p>
