--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -42,7 +42,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 						<div class="work-details wow fadeInUp">
 							<h3 class="work-details-title font-alt">Project Details</h3>
-							{% for text in page.category %}<h2 class="work-details-title font-inc">{{ page.category }}</h2>{% endfor %}
+							{% for text in page.category %}<p class="work-details-title font-inc">{{ page.category }}</p><br>{% endfor %}
 							<ul>
 								{% for text in page.client %}<li class="font-inc"><strong>Client: </strong>{{page.client}}</li>{% endfor %}
 
